[package]
name = "ross-http"
version = "1.5.0"
authors = ["Linas NikiperaviÄius <linas@linasdev.com>"]
edition = "2018"
license-file = "LICENSE.md"
description = "HTTP library for the Rusty Old Smart System"
repository = "https://github.com/linasdev/ross-http"
readme = "README.md"

[dependencies.regex-automata]
version = "0.1.10"
default-features = false
